Fix pagination UI dark mode, and add shadow to .glb

--- a/src/app/components/admin/users-list/users-list.css
+++ b/src/app/components/admin/users-list/users-list.css
@@ -33,12 +33,16 @@
 }
 
 
-@media(prefers-color-scheme){
+@media(prefers-color-scheme: light){
     .container::-webkit-scrollbar-track{
         background-color: #787878;
     }
 
     .container::-webkit-scrollbar-thumb{
         background-color: rgb(227, 227, 227);
-    }  
+    }
+
+    .pagination ::ng-deep .ngx-pagination .ng-star-inserted{
+        color: black;
+    }
 }
